@@ -52,8 +52,7 @@ static inline const AtomicString& eventTypeForKeyboardEventType(PlatformKeyboard
 }
 
 KeyboardEvent::KeyboardEvent()
-    : m_keyEvent(0)
-    , m_keyLocation(DOM_KEY_LOCATION_STANDARD)
+    : m_keyLocation(DOM_KEY_LOCATION_STANDARD)
     , m_altGraphKey(false)
 {
 }
@@ -61,7 +60,7 @@ KeyboardEvent::KeyboardEvent()
 KeyboardEvent::KeyboardEvent(const PlatformKeyboardEvent& key, AbstractView* view)
     : UIEventWithKeyState(eventTypeForKeyboardEventType(key.type()),
                           true, true, view, 0, key.ctrlKey(), key.altKey(), key.shiftKey(), key.metaKey())
-    , m_keyEvent(new PlatformKeyboardEvent(key))
+    , m_keyEvent(adoptPtr(new PlatformKeyboardEvent(key)))
     , m_keyIdentifier(key.keyIdentifier())
     , m_keyLocation(key.isKeypad() ? DOM_KEY_LOCATION_NUMPAD : DOM_KEY_LOCATION_STANDARD) // FIXME: differentiate right/left, too
     , m_altGraphKey(false)
@@ -72,7 +71,6 @@ KeyboardEvent::KeyboardEvent(const AtomicString& eventType, bool canBubble, bool
                              const String &keyIdentifier,  unsigned keyLocation,
                              bool ctrlKey, bool altKey, bool shiftKey, bool metaKey, bool altGraphKey)
     : UIEventWithKeyState(eventType, canBubble, cancelable, view, 0, ctrlKey, altKey, shiftKey, metaKey)
-    , m_keyEvent(0)
     , m_keyIdentifier(keyIdentifier)
     , m_keyLocation(keyLocation)
     , m_altGraphKey(altGraphKey)
